Se agrega un comentario respecto a como agregar tarea finalizada a la rama sprint1

--- a/index.html
+++ b/index.html
@@ -16,3 +16,6 @@
     
 </body>
 </html>
+
+<!--Hasta este punto ya tenemos una tarea completada, lo que sigue es hacer un merge con la sprint1
+en el repositorio local o realizar un pull request en github-->
