Se agregan comentarios acerca de tareas y los procesos eliminar branch y ver commits de un branch

--- a/index.html
+++ b/index.html
@@ -19,3 +19,14 @@
 
 <!--Hasta este punto ya tenemos una tarea completada, lo que sigue es hacer un merge con la sprint1
 en el repositorio local o realizar un pull request en github-->
+
+<!--Crear el layout no dependia de otras tareas, sin embargo, las tareas crear header
+y agregar titulo y favicon con tareas independientes entre si que dependen de que el layout este creado-->
+
+<!--Luego de que una tarea ha sido finalizada se tiene la opcion de eliminar el branch de
+esta tarea si se desea; para ello, en github por ejemplo, se va inicialmente a pull requests, y
+alli se selecionan closed (cerrados), posteriormente se selecciona el branch asociado al pull
+request cerrado que se desea eliminar y se da click en el boton delete branch -->
+
+<!--Si se quiere ver los commits de un branch particular, nos paramos en esta rama, y seleccionamos
+el boton "n commits" en la parte superior derecha de la tabla, lo cual, nos muestra los commits esta rama-->
