Se agrega el titulo de la pagina y tips sobre el proceso de gestion del proyecto en github

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Document</title>
+    <title>Razas de perros</title>
 </head>
 <body>
     <header></header>
@@ -30,3 +30,10 @@ request cerrado que se desea eliminar y se da click en el boton delete branch --
 
 <!--Si se quiere ver los commits de un branch particular, nos paramos en esta rama, y seleccionamos
 el boton "n commits" en la parte superior derecha de la tabla, lo cual, nos muestra los commits esta rama-->
+
+<!--Es muy importante poner el numero de indice a cada tarea (rama) que se crea en github
+Puesto que crear layout es una tarea que no depende de ninguna otra, esta se crea desde
+la rama main y cuando este completa se fuciona con la rama sprint1. Puesto que para
+crear titulo y favicon se requiere que el layout este creado esta tarea debe descender de
+la rama sprint1 (con el layout), de la misma manera la tarea crear estructura de header
+debe ser un branc que desciende de la rama sprint1-->
