Se agrega favicon

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--Con link se pueden agregar: archivos css, de javascript, imagenes, iconos, etc-->
+    <!--Como buena practica los iconos deben estar en formato ico-->
+    <link rel="shortcut icon" href="./media/perro.ico" type="image/x-icon"/>
     <title>Razas de perros</title>
 </head>
 <body>
-    <header></header>
+    <header></header> 
     <main>
         <section>Fotos Perros</section>
         <section>Tabla</section>
@@ -37,3 +40,13 @@ la rama main y cuando este completa se fuciona con la rama sprint1. Puesto que p
 crear titulo y favicon se requiere que el layout este creado esta tarea debe descender de
 la rama sprint1 (con el layout), de la misma manera la tarea crear estructura de header
 debe ser un branc que desciende de la rama sprint1-->
+
+<!--El favicon es el icono que aparece al lado del titulo de la pagina sobre la barra de
+direcciones del navegador-->
+
+<!--Tambien se puede indicar si se desea hacer un pull request de una rama hija hacia una
+rama madre, para posteriormente hacerlo. Para ello vamos a pull requests, damos click en
+New Pull Request, en base se selecciona sprint1 y donde dice compare se selecciona el
+branch que se quiere fusionar (2-titulo-y-favicon), hacemos click en create pull request,
+posteriormente, damos nuevamente click en create pull request. En este punto se puede
+asignar el pull request o su revision a una persona en especifico del equipo-->
