Se agrega una lista en el header

--- a/index.html
+++ b/index.html
@@ -29,4 +29,22 @@ alli se selecionan closed (cerrados), posteriormente se selecciona el branch aso
 request cerrado que se desea eliminar y se da click en el boton delete branch -->
 
 <!--Si se quiere ver los commits de un branch particular, nos paramos en esta rama, y seleccionamos
-el boton "n commits" en la parte superior derecha de la tabla, lo cual, nos muestra los commits esta rama-->
+el boton "n commits" en la parte superior derecha de la tabla, lo cual, nos muestra los commits de esta rama-->
+
+<!--Es muy importante poner el numero de indice a cada tarea (rama) que se crea en github
+Puesto que crear layout es una tarea que no depende de ninguna otra, esta se crea desde
+la rama main y cuando este completa se fuciona con la rama sprint1. Puesto que para
+crear titulo y favicon se requiere que el layout este creado esta tarea debe descender de
+la rama sprint1 (con el layout), de la misma manera la tarea crear estructura de header
+debe ser un branc que desciende de la rama sprint1-->
+
+<!--El favicon es el icono que aparece al lado del titulo de la pagina sobre la barra de
+direcciones del navegador-->
+
+<!--Tambien se puede indicar si se desea hacer un pull request de una rama hija hacia una
+rama madre, para posteriormente hacerlo. Para ello vamos a pull requests, damos click en
+New Pull Request, en base se selecciona sprint1 y donde dice compare se selecciona el
+branch que se quiere fusionar (2-titulo-y-favicon), hacemos click en create pull request,
+posteriormente, damos nuevamente click en create pull request. En este punto se puede
+asignar el pull request o su revision a una persona en especifico del equipo. Posteriormente
+se hace el merge y se elimina el branch con sprint1 y se eliminar el branch de la tarea-->
