--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <ul>
+            <li>Nuevo Post</li>
+            <li>Busqueda</li>
+            <li>Iniciar Sesion</li>
+            <li>Registro</li>
+        </ul>
+    </header>
     <main>
         <section>Fotos Perros</section>
         <section>Tabla</section>
