Se agrega un nuevo comentario

--- a/index.html
+++ b/index.html
@@ -55,3 +55,5 @@ branch que se quiere fusionar (2-titulo-y-favicon), hacemos click en create pull
 posteriormente, damos nuevamente click en create pull request. En este punto se puede
 asignar el pull request o su revision a una persona en especifico del equipo. Posteriormente
 se hace el merge y se elimina el branch con sprint1 y se eliminar el branch de la tarea-->
+
+<!--Antes de hacer un git add . debemos recordar guardar los cambios en los archivos (Ctrl s)-->
