--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <ul class="navbar">
-            <li>Logo</li>
+            <li>
+                <img src="./media/perro.png" alt="Loge de un perro" class="logo"/>
+            </li>
             <li>Nuevo Post</li>
             <li>Busqueda</li>
             <li>Iniciar Sesion</li>
