--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <ul class="navbar">
             <li>Logo</li>
-            <li>Nuevo Post</li>
+            <li><button class="mainButton">Nuevo Post</button></li>
             <li>Busqueda</li>
             <li>Iniciar Sesion</li>
             <li>Registro</li>
