Se agrega boton de registro

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><button class="mainButton">Nuevo Post</button></li>
             <li>Busqueda</li>
             <li>Iniciar Sesion</li>
-            <li>Registro</li>
+            <li><button class="mainButton">Registro</button></li>
         </ul>
     </header>
     <main>
@@ -63,3 +63,8 @@ asignar el pull request o su revision a una persona en especifico del equipo. Po
 se hace el merge con sprint1 y se elimina el branch de la tarea-->
 
 <!--Antes de hacer un git add . debemos recordar guardar los cambios en los archivos (Ctrl s)-->
+
+<!--Para la rama 7-crear-boton-registro se requiere el codigo creado en la rama 5-crear-boton-nuevo-post
+por ello, puesto que la rama 5 ya hizo un push hacia github, desde la rama 7 local hacemos un pull
+request de la rama 5 en github, lo cual conlleva un merge de la rama 7 local con la rama 5 remota;
+nuestro git siempre verificara que no hayan conflictos antes de un merge-->
