Se agrega boton login con estilos duplicando algo de codigo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li>Logo</li>
             <li><button class="mainButton">Nuevo Post</button></li>
             <li>Busqueda</li>
-            <li>Iniciar Sesion</li>
+            <li><button class="secondaryButton">Login</button></li>
             <li><button class="mainButton">Registro</button></li>
         </ul>
     </header>
@@ -68,3 +68,5 @@ se hace el merge con sprint1 y se elimina el branch de la tarea-->
 por ello, puesto que la rama 5 ya hizo un push hacia github, desde la rama 7 local hacemos un pull
 request de la rama 5 en github, lo cual conlleva un merge de la rama 7 local con la rama 5 remota;
 nuestro git siempre verificara que no hayan conflictos antes de un merge-->
+
+<!--No es una buena practica duplicar codigo-->
