--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header>
         <ul class="navbar">
             <li>Logo</li>
-            <li><button class="mainButton">Nuevo Post</button></li>
+            <li><button class="button mainButton">Nuevo Post</button></li>
             <li>Busqueda</li>
-            <li><button class="secondaryButton">Login</button></li>
-            <li><button class="mainButton">Registro</button></li>
+            <li><button class="button secondaryButton">Login</button></li>
+            <li><button class="button mainButton">Registro</button></li>
         </ul>
     </header>
     <main>
