--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--Con link se pueden agregar: archivos css, de javascript, imagenes, iconos, etc-->
     <!--Como buena practica los iconos deben estar en formato ico-->
     <link rel="shortcut icon" href="./media/perro.ico" type="image/x-icon"/>
+    <script src="https://kit.fontawesome.com/cb32582639.js" crossorigin="anonymous"></script>
     <title>Razas de perros</title>
 </head>
 <body>
@@ -15,7 +16,12 @@
         <ul class="navbar">
             <li>Logo</li>
             <li>Nuevo Post</li>
-            <li>Busqueda</li>
+            <li>
+                <div class="buscar">
+                    <i class="fas fa-search"></i>
+                    <input placeholder="Buscar Raza" type="text"/>
+                </div>
+            </li>
             <li>Iniciar Sesion</li>
             <li>Registro</li>
         </ul>
