Se realizan retoques finales al header

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             <li>
                 <img src="./media/perro.png" alt="Logo de un perro" class="logo"/>
             </li>
+            <li><button class="button mainButton">Nuevo Post</button></li>
             <li>
-                <div cla>
+                <div class="buscar">
                     <i class="fas fa-search"></i>
                     <input placeholder="Buscar Raza"/>
                 </div>
             </li>
-            <li><button class="button mainButton">Nuevo Post</button></li>
             <li><button class="button secondaryButton">Login</button></li>
             <li><button class="button mainButton">Registro</button></li>
         </ul>
     </header>
     <main>
-        <section>Fotos Perros</section>
-        <section>Tabla</section>
+        <section><!--Fotos Perros--></section>
+        <section><!--Tabla--></section>
     </main>
     <footer></footer>
     
