Se agregan nuevos estilos al navbar

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 <body>
     <header>
         <ul class="navbar">
-            <li>
-                <img src="./media/perro.png" alt="Logo de un perro" class="logo"/>
+            <li class="navelem">
+                <img src="./media/perro.png" alt="Logo de un perro" class="logo" />
             </li>
-            <li><button class="button mainButton">Nuevo Post</button></li>
+            <li><button class="button mainButton navelem">Nuevo Post</button></li>
             <li>
-                <div class="buscar">
-                    <i class="fas fa-search"></i>
+                <div class="buscar navelem">                    
                     <input placeholder="Buscar Raza"/>
+                    <i class="fas fa-search"></i>
                 </div>
             </li>
-            <li><button class="button secondaryButton">Login</button></li>
-            <li><button class="button mainButton">Registro</button></li>
+            <li><button class="button secondaryButton navelem">Login</button></li>
+            <li><button class="button mainButton navelem">Registro</button></li>
         </ul>
     </header>
     <main>
