Se agrega un h1

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </ul>
     </header>
     <main>
-        <section><!--Fotos Perros--></section>
+        <section>
+            <h1>Razas de Perros</h1>
+        </section>
         <section><!--Tabla--></section>
     </main>
     <footer></footer>
