Se empieza la construccion de la seccion de razas de perros

--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
     <main>
         <section>
             <h1>Razas de Perros</h1>
+            <ul>
+                <li>
+                    <div class="imgContainer">
+                        <img class="imgSize" src="./media/Border_Collie.jpg" alt="Imagen Border Collie" name="collie"/>
+                    </div>
+                    <label>Border Collie</label>
+                </li>
+                <li>
+                    <div class="imgContainer">
+                        <img class="imgSize" src="./media/pastor-belga-malinois_530_0_600.jpg" alt="Imagen Pastor Belga Malinois" name="belga" />Pastor Belga Malinois
+                    </div>
+                </li>
+                <li>Raza 3</li>
+                <li>Raza 4</li>
+                <li>Raza 5</li>
+                <li>Raza 6</li>
+                <li>Raza 7</li>
+                <li>Raza 8</li>
+                <li>Raza 9</li>
+                <li>Raza 10</li>
+            </ul>
         </section>
         <section><!--Tabla--></section>
     </main>
