El ul que contiene los cards de perros se vuelve flex

--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
     <main>
         <section>
             <h1>Razas de Perros</h1>
-            <ul>
+            <ul class="breedCardContainer">
                 <li>
                     <div class="imgContainer">
                         <img class="imgSize" src="./media/Border_Collie.jpg" alt="Imagen Border Collie" name="collie"/>
+                        <label>Border Collie</label>
                     </div>
-                    <label>Border Collie</label>
+                    
                 </li>
                 <li>
                     <div class="imgContainer">
-                        <img class="imgSize" src="./media/pastor-belga-malinois_530_0_600.jpg" alt="Imagen Pastor Belga Malinois" name="belga" />Pastor Belga Malinois
+                        <img class="imgSize" src="./media/pastor-belga-malinois_530_0_600.jpg" alt="Imagen Pastor Belga Malinois" name="belga" />
+                        <label>Pastor Belga Malinois</label>
                     </div>
                 </li>
                 <li>Raza 3</li>
