Se realiza el contenedor flex inferior del card con los likes, comentarios y vistas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!--Como buena practica los iconos deben estar en formato ico-->
     <link rel="shortcut icon" href="./media/perro.ico" type="image/x-icon"/>
     <script src="https://kit.fontawesome.com/cb32582639.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/cb32582639.js" crossorigin="anonymous"></script>
     <title>Razas de perros</title>
 </head>
 <body>
@@ -36,14 +35,28 @@
                 <li>
                     <div class="imgContainer">
                         <img class="imgSize" src="./media/Border_Collie.jpg" alt="Imagen Border Collie" name="collie"/>
-                        <label>Border Collie</label>
+                        <div>
+                            <label>Border Collie</label>
+                            <ul class="interaction">
+                                <li><i class="fa fa-heart" style="color:red"></i><span>150</span></li>
+                                <li><i class="fa fa-comment"></i><span>1.5k</span></li>
+                                <li><i class="fa fa-eye"></i></i><span>120</span></li>
+                            </ul>
+                        </div>
                     </div>
                     
                 </li>
                 <li>
                     <div class="imgContainer">
                         <img class="imgSize" src="./media/pastor-belga-malinois_530_0_600.jpg" alt="Imagen Pastor Belga Malinois" name="belga" />
-                        <label>Pastor Belga Malinois</label>
+                        <div>
+                            <label>Pastor Belga Malinois</label>
+                            <ul class="interaction">
+                                <li><i class="fa fa-heart" style="color:red"></i><span>450</span></li>
+                                <li><i class="fa fa-comment"></i><span>1.1k</span></li>
+                                <li><i class="fa fa-eye"></i></i><span>850</span></li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
                 <li>Raza 3</li>
