--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section>
-            <h1>Razas de Perros</h1>
+            <h1 class="titulo">Razas de Perros</h1>
             <ul class="breedCardContainer">
                 <li>
                     <div class="imgContainer">
